# mcp_openapi_bridge

./: .gitignore  CHANGELOG.md  Cargo.toml  FIXED.md  FLATTENING_COMPLETE.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  VERIFICATION.md  example.sh  show_flattening.sh  test.py  test_flattening.py
src/: main.rs
